colocando botao de seta pra cima mobile

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   </script>         
 </head>
 <body>
-  <header class="site-header">
+  <header class="site-header" id="topo">
     <div class="container">
       <div class="menu-wraper">
         <img class="logo" src="./assets/img/logo.png" alt="">
@@ -176,6 +176,8 @@
     <div><img class="responsive" src="./assets/img/footer-title.png" alt=""></div>
     <div><img src="./assets/img/footer.png" alt=""></div>
   </footer>
+
+ <a href="#topo"> <img   class="top-arrow" src="./assets/img/seta-para-cima.png" alt=""></a>
 
   <div class="modal-produtos-overlay">
         <!-- /modal 1  -->
