ajustando feedback do form de contato

--- a/index.html
+++ b/index.html
@@ -270,6 +270,13 @@
       <img src="./assets/img/produtos/p18.png" alt="">
       <button onclick="closeModal('produto-18')" class="modal-fechar">X</button>
     </div>
+
+    <div class="produto-modal" id="form-feedback">
+      <h3>Sucesso</h3>
+      <img src="./assets/img/email.png" alt="">
+      <p>Sua mensagem foi enviada com sucesso.</p>
+      <button onclick="closeModal('form-feedback')" class="modal-fechar">X</button>
+    </div>
   </div>
 
   <!-- script  -->
