--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     <img class="responsive" src="./assets/img/top-banner.jpg" alt="">
   </div>
 
-  <div class="center relative">
+  <div class="center relative tcols">
     <img class="responsive" src="./assets/img/tree-cols.png" alt="">
     <img class="prato-1" src="./assets/img/prato1.png" alt="">
   </div>
